Fix sidebar icons positioning, set default scrollbar style, fix positioning of history bar

--- a/frontend/src/stylesheets/HistoryBar.scss
+++ b/frontend/src/stylesheets/HistoryBar.scss
@@ -19,61 +19,91 @@
   }
 }
 
-.btn-wrapper{
-  background-color: inherit;
-}
-
 .history-collection {
-  color: 'ffffff';
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
+  color: #ffffff;
   background-color: #626262;
-  height: 100%;
+  height: calc(100% - 8vh);
   padding: 2vh;
 
+  &:hover{
+    overflow: auto;
+  }
+
+  &:active{
+    overflow: auto;
+  }
+
   .history-preview{
+    flex-shrink: 0;
+
+    position: relative;
+
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+
     background-color: inherit;
-    width: 9vw;
-    height: 9vw;
+    width: auto;
+    height: auto;
+
     padding-bottom: 2vh;
 
-    .thumbnail {
-      z-index: 0;
-      width: 100%;
-      height: 100%;
-    }
-
-    .btn-overlay{
-      position: absolute;
-      z-index: 1;
-      width: inherit;
-      height: inherit;
-      background-color: inherit;
-      opacity: 0.5;
-
-      &:hover{
-        opacity: 0.6;
-      }
-
-      &:active{
-        opacity: 0.8;
-      }
-    }
-
-    .btn-icon {
-      position: absolute;
-      z-index: 2;
-      pointer-events: none;
+    .image-preview{
       display: flex;
+      flex-shrink: 0;
       justify-content: center;
       align-items: center;
+      background-color: inherit;
+      width: auto;
+      height: auto;
 
-      i{
-        font-size: 5vh;
-        color: #ffffff;
-        opacity: 1.0;
+      .btn-overlay{
+        position: absolute;
+        z-index: 1;
+        width: 9vw;
+        height: 9vw;
+        background-color: inherit;
+        opacity: 0.5;
+
+        &:hover{
+          opacity: 0.6;
+        }
+
+        &:active{
+          opacity: 0.8;
+        }
+      }
+
+      .btn-icon {
+        position: absolute;
+        z-index: 2;
+        pointer-events: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        i{
+          font-size: 5vh;
+          color: #ffffff;
+          opacity: 1.0;
+        }
+      }
+
+      .thumbnail {
+        z-index: 0;
+        width: 9vw;
+        height: 9vw;
       }
     }
+
+    .label-preview{
+      padding-top: 1vh;
+    }
+
   }
 }
