--- a/frontend/src/stylesheets/Sidebar.scss
+++ b/frontend/src/stylesheets/Sidebar.scss
@@ -4,10 +4,6 @@
   --z-index-higher: 10 !important;
 }
 
-.sidebar:hover{
-  overflow-y: auto !important;
-}
-
 .sidebar {
   font-size: 2vh;
   background: #9e9e9e;
@@ -18,27 +14,71 @@
   right: 12vw !important;
   overflow: hidden;
 
-  ::-webkit-scrollbar {
-    width: 1em;
-    background: #616161;
-  }
-
-  ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background: #BDBDBD;
-  }
-
   aside {
     display: flex;
     flex-direction: column;
     height: 100%;
   }
 
+  .feature-indicator {
+    height: 8vh;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+
+    .item {
+      min-width: 0;
+      text-align: center;
+      color: $sidebar-button-off-color-1;
+      background: $sidebar-button-off-color-2;
+
+      &.active {
+        color: $sidebar-button-on-color-1;
+        background: $sidebar-button-on-color-2;
+      }
+
+      button {
+        display: flex;
+        width: 100%;
+        height: 8vh;
+        min-width: 0;
+        border-radius: 0;
+        color: inherit !important;
+
+        .material-icons {
+          line-height: 1em;
+          font-size: 6vh;
+          margin: 0;
+        }
+      }
+
+      .custom-icon {
+        margin-top: 4px;
+        width: 20px;
+        height: 20px;
+        line-height: 1em;
+        vertical-align: baseline;
+
+        svg .cls-1 {
+          fill: currentColor;
+        }
+      }
+    }
+  }
+
   .sidebar__content-container{
+    height: calc(100% - 8vh);
     padding: 3vh;
+    overflow: hidden;
+
+    &:hover{
+      overflow-y: auto;
+    }
+
+    &:active{
+      overflow-y: auto;
+    }
 
     .sidebar-content{
       padding-bottom: 3vh;
@@ -65,51 +105,6 @@
 
         li {
           height: 8vh;
-        }
-      }
-    }
-  }
-
-  .feature-indicator {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-
-    li {
-      text-align: center;
-      color: $sidebar-button-off-color-1;
-      background: $sidebar-button-off-color-2;
-      flex-grow: 1;
-
-      &.active {
-        color: $sidebar-button-on-color-1;
-        background: $sidebar-button-on-color-2;
-      }
-
-      button {
-        width: 100%;
-        height: 8vh;
-        min-width: 0;
-        border-radius: 0;
-        color: inherit !important;
-
-        .material-icons {
-          line-height: 1em;
-          font-size: 6vh;
-          margin: 0;
-        }
-      }
-
-      .custom-icon {
-        margin-top: 4px;
-        width: 20px;
-        height: 20px;
-        line-height: 1em;
-        vertical-align: baseline;
-
-        svg .cls-1 {
-          fill: currentColor;
         }
       }
     }
